fix z-index

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -8,7 +8,7 @@
     width: 100%;
     box-sizing: border-box;
 
-    z-index: 1;
+    z-index: 2;
 
     gap: 2rem;
     backdrop-filter: blur(8px);
